refactor: changes related to previous improvements